@@ -1,3 +1,9 @@
+2001-08-27  John Levon  <moz@compsoc.man.ac.uk>
+
+	* Makefile.am:
+	* configure.in: 
+	* data/: moved data into a sub-dir
+ 
 2001-08-16  John Levon  <moz@compsoc.man.ac.uk>
 
 	* Makefile.am:
